# Aurora

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  PROJECT_MAP.md  README.md  alembic.ini  aurora_installer.iss  pyproject.toml  requirements.txt  run.py
.github/ISSUE_TEMPLATE/: ClassicBug.md  HighBug.md  minorBug.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 238bcefab8c3_add_summary_field_to_books_table.py  5550fa064b86_add_profile_image_to_members.py  61bf77348251_add_cover_image_field_to_books_table.py  85242b1a76fb_add_title_and_author_indexes_to_books_.py
lang/: de.yaml  en.yaml  fr.yaml  nl.yaml
libapp/: __version__.py  _version.py  app.py  license.txt
libapp/persistence/: base.py  database.py  migrate.py  models_sa.py  repositories.py  unit_of_work.py
libapp/services/: audit_service.py  backup_service.py  bnf_adapter.py  bnf_service.py  book_service.py  column_mapping.py  config_service.py  enhanced_logging_config.py  export_service.py  field_keywords.json  googlebooks_service.py  import_service.py  loan_service.py  logging_config.py  member_service.py  meta_search_service.py  metrics_service.py  openlibrary_adapter.py  openlibrary_service.py  preferences.py  search_index.py  translation_service.py  types.py  utils.py
libapp/ui/: main_window.ui
libapp/utils/: __init__.py  icon_helper.py  paths.py
libapp/views/: __init__.py  __version__.py  (+21 more)
scripts/: generate_map.py
tests/: conftest.py  test_export_service.py  test_import_cleaning.py  test_import_smoke.py  test_loans_rules.py  test_loans_smoke.py
(+1 files in other folders)
