
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "library-app"
version = "1.0.0"
description = "Small library desktop app (PySide6 + SQLAlchemy + BnF/OpenLibrary + Loans)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "python-dotenv>=1.0",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "requests>=2.31"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "black>=24.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["." ]

[tool.ruff]
# cible le même Python que la CI
target-version = "py311"
line-length = 100
# Répertoires à ignorer
exclude = [".git", ".venv", "venv", "build", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]


[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]  # sys.path.append avant import: OK pour Alembic

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py311"]

